# a2a-test

./: .service_pids  Makefile  README.md  debug_500.py  debug_knowledge.py  distributed_main.py  knowledge_simple.py  main.py  pyproject.toml  test_knowledge_direct.py  test_mistral.py
scripts/: register_services.sh  start_services.sh  stop_services.sh
src/a2a_research/: __init__.py  aggregation_service.py  base_service.py  demo.py  distributed_client.py  knowledge_service.py  models.py  search_service.py
src/a2a_research/servers/: __init__.py  aggregation_server.py  auth.py  knowledge_server.py  knowledge_server_backup.py  knowledge_server_fallback.py  registry.py  search_server.py
