[project]
name = "google-a2a-demo"
version = "0.1.0"
description = "A demonstration of Application-to-Application (A2A) communication patterns for research workflows"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.2.1",
    "fastapi>=0.116.1",
    "google-auth>=2.40.3",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "google-cloud-pubsub>=2.31.0",
    "google-cloud-storage>=3.2.0",
    "httpx>=0.28.1",
    "rich>=14.0.0",
    "uvicorn>=0.35.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "duckduckgo-search>=4.0.0",
]
